[project]
name = "patchsorter-prototyping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datashader>=0.17.0",
    "holoviews>=1.20.2",
    "jupyter-bokeh>=4.0.5",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.2",
    "tiledb>=0.35.1",
    "tiledb-bioimg[full]>=0.3.9",
]
